limit by seams bug #42510

Closed
opened 2014-11-05 22:32:37 +01:00 by Alexey · 14 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
link_bu_seams.png
link_bu_seams1.png
link_bu_seams2.png
Exact steps for others to reproduce the error
lim_by_seams.blend
1)Open, select any verticle in closed area, ctrl+L, switch on limit by seams - ignore this function
2)Switch on face selection mode, select any face in closed area, ctrl+L - all OK

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![link_bu_seams.png](https://archive.blender.org/developer/F122148/link_bu_seams.png) ![link_bu_seams1.png](https://archive.blender.org/developer/F122150/link_bu_seams1.png) ![link_bu_seams2.png](https://archive.blender.org/developer/F122152/link_bu_seams2.png) **Exact steps for others to reproduce the error** [lim_by_seams.blend](https://archive.blender.org/developer/F122154/lim_by_seams.blend) 1)Open, select any verticle in closed area, ctrl+L, switch on limit by seams - ignore this function 2)Switch on face selection mode, select any face in closed area, ctrl+L - all OK
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

#43227 was marked as duplicate of this issue

#43227 was marked as duplicate of this issue
Campbell Barton self-assigned this 2014-11-06 00:17:18 +01:00

Limit by Seams intentionally only works in face-select mode

However this isn't communicated (since you can enable the option after enabling the tool).

Id like to extend support for delimiting selection and improve this for next release.

Assigning to Blender-Next (todo for next release)

Limit by Seams intentionally only works in face-select mode However this isn't communicated (since you can enable the option after enabling the tool). Id like to extend support for delimiting selection and improve this for next release. Assigning to Blender-Next (todo for next release)

Added subscriber: @Cenda

Added subscriber: @Cenda

This issue was referenced by 2d4980e68e

This issue was referenced by 2d4980e68ebbff4cd78f71abb42e767b0d9a1247

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This comment was removed by @mont29

*This comment was removed by @mont29*

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @mont29

Added subscriber: @mont29

This comment was removed by @mont29

*This comment was removed by @mont29*

This issue was referenced by ba9dbaae64

This issue was referenced by ba9dbaae648ed9d73d8516495829661cb91f77ff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ba9dbaae64.

Closed by commit ba9dbaae64.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42510
No description provided.