Fix T42510: Limit by seams fails in edge/vert mode